[gd_scene load_steps=12 format=3 uid="uid://cgy5oimumekru"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_djlp4"]
[ext_resource type="Texture2D" uid="uid://cgsjl37d4w53" path="res://Assets/Sprites/Corazon_1_hp.tres" id="2_x84m0"]
[ext_resource type="AudioStream" uid="uid://qnu3j28yj6vi" path="res://Assets/Sonido/SFX/Hurt.wav" id="4_obehy"]
[ext_resource type="AudioStream" uid="uid://c74d5p8eujr5y" path="res://Assets/Sonido/SFX/heal.wav" id="5_c1lbd"]
[ext_resource type="AudioStream" uid="uid://doa5n47lgkvka" path="res://Assets/Sonido/SFX/doki1.mp3" id="5_rb53t"]

[sub_resource type="Animation" id="Animation_xeqol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_50mg6"]
resource_name = "dokidoki"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.08, 0.11, 0.17, 0.21, 0.39, 0.44, 0.49, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.5), Vector2(1.25, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1.25, 1.5), Vector2(1.5, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_frwta"]
_data = {
"RESET": SubResource("Animation_xeqol"),
"dokidoki": SubResource("Animation_50mg6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7xh7u"]
radius = 7.0

[sub_resource type="Curve" id="Curve_fu6qu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.588099), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_cc6dh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.136012), -0.219974, 0.0, 0, 0]
point_count = 2

[node name="Player" type="Node2D"]
script = ExtResource("1_djlp4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_x84m0")

[node name="AnimationTree" type="AnimationPlayer" parent="Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_frwta")
}
autoplay = "dokidoki"

[node name="PlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource("CircleShape2D_7xh7u")

[node name="Dev suff" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Dev suff"]
offset_left = -20.0
offset_top = -33.0
offset_right = 20.0
offset_bottom = -10.0

[node name="Heartbeat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_rb53t")
volume_db = -8.743
autoplay = true

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_obehy")

[node name="Heal" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_c1lbd")

[node name="HurtCD" type="Timer" parent="."]
wait_time = 2.0

[node name="SangradoConstante" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, -1)
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
randomness = 0.31
lifetime_randomness = 0.73
emission_shape = 2
emission_sphere_radius = 3.9
gravity = Vector2(0, 500)
scale_amount_max = 3.05
scale_amount_curve = SubResource("Curve_fu6qu")
color = Color(0.901961, 0.282353, 0.180392, 1)

[node name="HurtParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.4
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 200)
initial_velocity_min = 50.0
initial_velocity_max = 150.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_cc6dh")
color = Color(0.901961, 0.282353, 0.180392, 1)

[connection signal="area_entered" from="PlayerArea" to="." method="_on_area_player_area_entered"]
[connection signal="finished" from="Heartbeat" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="HurtCD" to="." method="_on_hurt_cd_timeout"]
